--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="#experience">Experience</a>
             <a href="#education">Education</a>
             <a href="#projects">Projects</a>
-            <a href="#contact">Contact</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
     
@@ -64,6 +64,30 @@
                 <a href="#" class="btn">Read more</a>
             </div>
         </section>
+
+        <section class="experience" id="education">
+            <div class="education-content">
+                <div class="grid-container">
+                    <div class="edu-header">
+                        <h2 class="heading">My <span>Experience</span></h2>
+                    </div>
+                    <div class="byu">
+                        <img class="edu-img" src="img/env.logo.png" alt="Envelope Money Logo">
+                        <h1 class="school">Software Engineer Intern</h1>
+                        <h3 class="school-major">Envelope (YC S23)</h3>
+                        <p class="school-year">Mar 2024 - Jun 2024</p>
+                    </div>
+                    <div class="byui">
+                        <img class="trad-logo" src="img/teton-radiology-logo.jpeg" alt="Teton Radiology Logo">
+                        <h1 class="school">Database Assistant</h1>
+                        <h3 class="school-major">Teton Radiology</h3>
+                        <p class="school-year">Aug 2019 - Mar 2022</p>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+
+         </section>
 
         <!-- Education Design -->
          <section class="education" id="education">
