--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
         </section>
 
-        <section class="experience" id="education">
+        <section class="experience" id="experience">
             <div class="education-content">
                 <div class="grid-container">
                     <div class="edu-header">
