--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <a href="#experience">Experience</a>
             <a href="#education">Education</a>
             <a href="#projects">Projects</a>
+            <a href="https://www.overleaf.com/latex/templates/jakes-resume/syzfjbzwjncs">Template</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
@@ -40,7 +41,7 @@
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/james-strobel-170783295/"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/StrobeCode"><i class="fa-brands fa-github"></i></a>
-                <a href="https://www.overleaf.com/latex/templates/jakes-resume/syzfjbzwjncs"><i class="fa-solid fa-file"></i></a>
+                <!-- <a href="https://www.overleaf.com/latex/templates/jakes-resume/syzfjbzwjncs"><i class="fa-solid fa-file"></i></a> -->
                 <a href="https://www.instagram.com/strobe_stack/"><i class="fa-brands fa-instagram"></i></a>
             </div>
             <a href="assets/James-Strobel-Resume.pdf" class="btn">My Resume</a>
@@ -150,6 +151,10 @@
             <!-- <a class="scheme" href="https://github.com/StrobeCode/scheme-interpreter"><img class="scheme-logo" src="img/scheme.png" alt="Scheme Language Logo"></a> -->
 
          </section>
+         <footer class="footer">
+            &copy; 2024 James Strobel. All rights reserved.
+        </footer>
+        
     <!--  -->
     <script src="JS/main.js"> 
 
