--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
         </div>
 
         <div class="home-img">
-            <img src="img/IMG_6134-modified.png" alt="Picture of Me">
+            <img src="img/IMG_6134-modified.png" alt="professional Photo of me">
         </div>
     </section>
 
     <!-- About Design -->
         <section class="about" id="about">
             <div class="about-img">
-                <img src="img/about.jpg" alt="About Image">
+                <img src="img/about.jpg" alt="professional Photo of me">
             </div>
             
             <div class="about-content">
@@ -66,6 +66,7 @@
             </div>
         </section>
 
+        <!-- Experience Design -->
         <section class="experience" id="experience">
             <div class="education-content">
                 <div class="grid-container">
