--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta description="James Strobel's Personal Portfolio Website.">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -39,10 +40,10 @@
             <h3>I'm a <span>Software Engineer</span></h3>
             <!-- <p>I am a Computer Science student at Brigham Young University with a strong passion for software development and engineering. My goal is to combine my academic knowledge and technical skills with practical, real-world applications, focusing on software engineering, mobile app development, and system design. I am eager to engage in innovative projects where I can collaborate with diverse teams, learn from experienced professionals, and contribute to meaningful technological advancements. I am open to opportunities that allow me to apply my skills in problem-solving, coding, and development while continuing to grow and evolve as a professional in the tech industry.</p> -->
             <div class="social-media">
-                <a href="https://www.linkedin.com/in/james-strobel-170783295/"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="https://github.com/StrobeCode"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/james-strobel-170783295/" aria-label="Visit my Linkedin profile"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/StrobeCode" aria-label="Visit my GitHub Profile"><i class="fa-brands fa-github"></i></a>
                 <!-- <a href="https://www.overleaf.com/latex/templates/jakes-resume/syzfjbzwjncs"><i class="fa-solid fa-file"></i></a> -->
-                <a href="https://www.instagram.com/strobe_stack/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.instagram.com/strobe_stack/" aria-label="Visit my Instagram Profile"><i class="fa-brands fa-instagram"></i></a>
             </div>
             <a href="assets/James Strobel-Software Engineer-Resume.pdf" class="btn">My Resume</a>
         </div>
@@ -76,13 +77,13 @@
                     <div class="byu">
                         <img class="edu-img" src="img/env.logo.png" alt="Envelope Money Logo">
                         <h1 class="school">Software Engineer Intern</h1>
-                        <h3 class="school-major">Envelope (YC S23)</h3>
+                        <p class="school-major"> Envelope (YC S23)</p>
                         <p class="school-year">Mar 2024 - Jun 2024</p>
                     </div>
                     <div class="byui">
                         <img class="trad-logo" src="img/teton-radiology-logo.jpeg" alt="Teton Radiology Logo">
                         <h1 class="school">Database Assistant</h1>
-                        <h3 class="school-major">Teton Radiology</h3>
+                        <p class="school-major">Teton Radiology</p>
                         <p class="school-year">Aug 2019 - Mar 2022</p>
                         <p></p>
                     </div>
@@ -101,13 +102,13 @@
                     <div class="byu">
                         <img class="edu-img" src="img/byu.png" alt="BYU Shield Logo">
                         <h1 class="school">Brigham Young University</h1>
-                        <h3 class="school-major">Bachelor of Science - BS, Computer Science</h3>
+                        <p class="school-major">Bachelor of Science - BS, Computer Science</p>
                         <p class="school-year">2022-2024</p>
                     </div>
                     <div class="byui">
                         <img class="edu-img" src="img/byu-i.png" alt="BYUI Shield Logo">
                         <h1 class="school">Brigham Young University-Idaho</h1>
-                        <h3 class="school-major">Bachelor of Science - BS, Computer Science</h3>
+                        <p class="school-major">Bachelor of Science - BS, Computer Science</p>
                         <p class="school-year">2024-2026</p>
                         <p></p>
                     </div>
